[tool.poetry]
name = "road_lane_detection"
version = "0.1.0"
description = "Identification of Roads and Lanes"
authors = ["sirius0503 <sirius0503en@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
