[tool.poetry]
name = "road_lane_detection"
version = "0.1.0"
description = "Identification of Roads and Lanes"
authors = ["sirius0503 <sirius0503en@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
opencv-contrib-python = "^4.3.0"

[tool.poetry.dev-dependencies]
flake8 = "3.8.*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
